# Project

./: CMakeLists.txt  esp-cmd.bat  esp-eraseFlash.bat  esp-first.bat  esp-onlyFlash.bat  esp-port.ini  partitions.csv  프로젝트내용.txt
components/iringer_connectivity_zigbee/: CMakeLists.txt  iringer_zigbee.c
components/iringer_device_state/: CMakeLists.txt
components/iringer_display/: CMakeLists.txt  iringer_tft_panel.c
components/iringer_io/: iringer_battery.c  iringer_capacitor_sensor.c  iringer_led.c
components/iringer_lp_core/: lp_core_main_lp.c  lp_core_main_lp.c.bak  lp_core_shared_memory.c
components/iringer_reporting/: CMakeLists.txt  iringer_report.c
components/iringer_storage/: CMakeLists.txt  iringer_storage.c
docs/: LCD_흰색화면_발생가능지점_조사보고서.html
i_ringer_app/: gradle.properties  settings.gradle.kts
i_ringer_app/app/: build.gradle.kts
i_ringer_was/i_ringer_was/: .env  .env.development  .env.example  .env.production  data-source.ts  docker-compose.mqtt.yml  ecosystem.config.js  mosquitto.conf  package-lock.json  package.json  swagger.json
i_ringer_web/i_ringer_web/: .env  .env.production  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
iringer_ir_end_device_2.1/: FileMerger.bat  README.md  esp-MonitorAndLog.bat  esp-buildEraseFlash.bat  esp-buildNFlash.bat  esp-onlyMonitor.bat  sdkconfig  sdkconfig.defaults  sdkconfig.old
iringer_ir_end_device_2.1/components/iringer_io/: CMakeLists.txt  iringer_buzzer.c
iringer_ir_end_device_2.1/components/iringer_io/include/: iringer_capacitor_sensor.h
iringer_ir_end_device_2.1/components/iringer_lp_core/: CMakeLists.txt  lp_core.c
iringer_ir_end_device_2.1/components/iringer_lp_core/include/lp_core/: lp_core.h  lp_core_algorithm_config.h  lp_core_main_lp.h
iringer_ir_end_device_2.1/docs/: LCD_SLEEP_DELAY_구현검토보고서.html  LCD_연결아이콘_문자색상_짤림_구현현황.html  LED_점등_개발계획서.html  통신_5시간_LCD_18000초_영향_검토보고서.html
iringer_ir_end_device_2.1/main/: iringer_alarm_authority.c  iringer_app_common.h  iringer_app_helpers.c  iringer_app_report.c  iringer_app_report.h  iringer_app_sleep.c  (+1 more)
main/: CMakeLists.txt  idf_component.yml  iringer_alarm_authority.h  iringer_alive_marker.c
(+263 files in other folders)
